# agct

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: checks.yaml  checks.yml  release.yaml
analysis/: requirements.txt  speed_test.ipynb
chainlifter/: main.py
liftie/: main.py
python/chainlifter/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
src/agct/: __init__.py  assembly_registry.py  converter.py  seqref_registry.py
src/chainlifter/: lifter.py  version.py
tests/: conftest.py  test_assembly_registry.py  test_converter.py  test_liftover.py  test_rust_api.py  test_seqref_registry.py
tests/data/: invalid_chainfile.chain
tests/data/ucsc-chainfile/: chainfile_hg19_to_hg38_.chain  chainfile_hg38_to_hg19_.chain
