[project]
name = "agct"
version = "0.2.0rc1"
authors = [
    {name = "James Stevenson"},
    {name = "Kori Kuzma"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.11"
description = "Another Genome Conversion Tool: Python frontend to Rust chainfile crate"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["wags-tails"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]
dev = [
    "maturin",
    "ruff==0.14.10",
    "prek>=0.2.23",
]

[project.urls]
Homepage = "https://github.com/genomicmedlab/agct"
Documentation = "https://github.com/genomicmedlab/agct"
Changelog = "https://github.com/genomicmedlab/agct/releases"
Source = "https://github.com/genomicmedlab/agct"
"Bug Tracker" = "https://github.com/genomicmedlab/agct/issues"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agct._core"
python-source = "src"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# S101 - assert
# B011 - assert-false
# INP001 - implicit-namespace-package
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "D",
    "S101",
    "B011",
    "INP001",
    "PLR2004",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
